--- a/libero/configs/config_no_ll.yaml
+++ b/libero/configs/config_no_ll.yaml
@@ -16,7 +16,7 @@ folder: null # use default path
 bddl_folder: null # use default path
 init_states_folder: null # use default path
 load_previous_model: false
-device: "cuda"
+device: "cuda:7"
 task_embedding_format: "bert"
 task_embedding_one_hot_offset: 1
 pretrain: false
