--- a/libero/configs/eval/default.yaml
+++ b/libero/configs/eval/default.yaml
@@ -4,7 +4,7 @@ batch_size: 64
 num_workers: 0
 n_eval: 10  # ori: 20
 eval_every: 10  # ori: 5
-max_steps: 600
+max_steps: 800  # ori: 600
 use_mp: true
 num_procs: 10  # ori: 20
 save_sim_states: false
