--- a/libero/configs/eval/default.yaml
+++ b/libero/configs/eval/default.yaml
@@ -1,7 +1,7 @@
 load_path: "" # only used when separately evaluating a pretrained model
 eval: true
-batch_size: 64
-num_workers: 0
+batch_size: 256  # ori: 64
+num_workers: 26  # ori: 0
 n_eval: 10  # ori: 20
 eval_every: 10  # ori: 5
 max_steps: 800  # ori: 600
