--- a/libero/configs/config_no_ll.yaml
+++ b/libero/configs/config_no_ll.yaml
@@ -25,5 +25,7 @@ pretrain_model_path: ""
 benchmark_name: "yy_try"
 #version: "kitchen_v0"
 version: "shelf_move_potato_v0"
+# yy: Do you wanna to split the 50 demos into 40 & 10?
 is_split: true
+#yy: Do you wanna skill rollout eval (only do once after all training)?
 is_customize_task: true
