--- a/libero/configs/config_no_ll.yaml
+++ b/libero/configs/config_no_ll.yaml
@@ -4,7 +4,8 @@ defaults:
   - _self_
   - data: default
 #  - policy: bc_transformer_policy
-  - policy: bc_rnn_policy
+#  - policy: bc_rnn_policy
+  - policy: bc_vilt_policy
   - train: default
   - eval: default
   - lifelong: base
